--- a/src/components/form-input.css
+++ b/src/components/form-input.css
@@ -1,141 +1,147 @@
-input[type='text'],
-input[type='email'],
-input[type='url'],
-input[type='password'],
-input[type='number'],
-input[type='date'],
-input[type='datetime-local'],
-input[type='month'],
-input[type='search'],
-input[type='tel'],
-input[type='time'],
-input[type='week'],
+input[type="text"],
+input[type="email"],
+input[type="url"],
+input[type="password"],
+input[type="number"],
+input[type="date"],
+input[type="datetime-local"],
+input[type="month"],
+input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="week"],
 [multiple],
-textarea, 
+textarea,
 select {
-	@apply w-fit block flex-1 border-0 bg-transparent py-3 text-primary-900 placeholder:text-aeblack-300 focus:ring-0 text-base leading-6;
-	@apply motion-reduce:transition-none;
-	@apply disabled:pointer-events-none disabled:cursor-not-allowed;
+  @apply text-primary-900 placeholder:text-aeblack-300 block w-fit flex-1 border-0 bg-transparent py-3 text-base leading-6 focus:ring-0;
+  @apply motion-reduce:transition-none;
+  @apply disabled:pointer-events-none disabled:cursor-not-allowed;
 }
 
 input[type="range"] {
-	@apply appearance-none my-3 text-base inline-block align-middle bg-aeblack-200/50 rounded bg-gradient-to-r from-primary-300 to-primary-500 bg-no-repeat h-2 w-full;
+  @apply bg-aeblack-200/50 from-primary-300 to-primary-500 my-3 inline-block h-2 w-full appearance-none rounded bg-gradient-to-r bg-no-repeat align-middle text-base;
 }
 input[type="range"]::-webkit-slider-thumb {
-	@apply appearance-none w-5 h-5 rounded-full bg-primary-800 cursor-[ew-resize] transition-colors shadow-sm;
+  @apply bg-primary-800 h-5 w-5 cursor-[ew-resize] appearance-none rounded-full shadow-sm transition-colors;
 }
 input[type="range"]::-webkit-slider-thumb:hover {
-	@apply bg-primary-700;
+  @apply bg-primary-700;
 }
 input[type="range"]::-webkit-slider-runnable-track {
-	@apply appearance-none shadow-none border-0 bg-transparent;
+  @apply appearance-none border-0 bg-transparent shadow-none;
 }
 input[type="file"] {
-	&:not(:disabled):not([readonly]){
-		@apply cursor-pointer;
-	}
-	@apply w-full overflow-hidden border-0 motion-reduce:transition-none outline-none;
-	@apply file:text-primary-700 file:bg-transparent file:bg-primary-50 file:me-4 file:h-full file:px-4;
-	@apply file:focus:z-10 file:border-0 file:focus:shadow-primary-400/20 file:ring-1 file:ring-inset file:ring-primary-300 file:py-3 file:rounded-s file:focus-within:ring-2 file:focus-within:ring-inset file:focus-within:ring-primary-600 focus:outline-primary-500;
-	&:hover:not(:disabled):not([readonly])::file-selector-button {
-		@apply bg-primary-100;
-	}
+  &:not(:disabled):not([readonly]) {
+    @apply cursor-pointer;
+  }
+  @apply w-full overflow-hidden border-0 outline-none motion-reduce:transition-none;
+  @apply file:text-primary-700 file:bg-primary-50 file:me-4 file:h-full file:bg-transparent file:px-4;
+  @apply file:focus:shadow-primary-400/20 file:ring-primary-300 file:focus-within:ring-primary-600 focus:outline-primary-500 file:rounded-s file:border-0 file:py-3 file:ring-1 file:ring-inset file:focus-within:ring-2 file:focus-within:ring-inset file:focus:z-10;
+  &:hover:not(:disabled):not([readonly])::file-selector-button {
+    @apply bg-primary-100;
+  }
 }
 .aegov-form-control {
-	& label {
-		@apply block text-sm font-medium leading-6 text-aeblack-800 mb-1;
-	}
-	& .form-control-input {
-		@apply relative bg-whitely-50 flex rounded-md shadow-sm focus:shadow-md ring-1 ring-inset ring-primary-400 focus-within:ring-2 focus-within:ring-inset focus-within:ring-primary-600 ; 
-		& .control-prefix,
-		& .control-suffix {	
-			@apply flex select-none items-center text-aeblack-300;
+  & label {
+    @apply text-aeblack-800 mb-1 block text-sm font-medium leading-6;
+  }
+  & .form-control-input {
+    @apply bg-whitely-50 ring-primary-400 focus-within:ring-primary-600 relative flex rounded-md shadow-sm ring-1 ring-inset focus-within:ring-2 focus-within:ring-inset focus:shadow-md;
+    & .control-prefix,
+    & .control-suffix {
+      @apply text-aeblack-300 flex select-none items-center;
 
-			& + input {
-				@apply pl-1.5;
-			}
+      & + input {
+        @apply pl-1.5;
+      }
 
-			& > svg {
-				@apply h-6 w-6 fill-current me-1.5;
-			}
-		}
-		&:has(:disabled) {
-			@apply opacity-40;
-		}
-		&:has([type="range"]) {
-			@apply border-0 ring-0 shadow-none;
-		}
-		& .control-prefix {
-			@apply ps-3;
-		}
-		& .control-suffix {
-			@apply pe-3;
-		}
-		& input[type="date"],input[type="datetime-local"],input[type="month"] {
-			& + .control-suffix{
-				@apply absolute right-1 top-2/4 -translate-y-2/4 pe-0 pointer-events-none appearance-none bg-inherit;
-				& svg{
-					@apply focus-within:ring-2 focus-within:ring-inset focus-within:ring-primary-600;
-				}
-			}
-		}
-		&:focus-within{
-			& .control-prefix {
-				@apply text-primary-900;
-			}
-			& .control-suffix {
-				@apply text-primary-900;
-			}
-		}
-	}
-	& select{
-		@apply text-primary-900 pe-9 ps-3 rtl:bg-[0.5rem];
-		background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%237C5E24' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
-	}
-	& textarea{
-        @apply h-auto;
+      & > svg {
+        @apply me-1.5 h-6 w-6 fill-current;
+      }
     }
+    &:has(:disabled) {
+      @apply opacity-40;
+    }
+    &:has([type="range"]) {
+      @apply border-0 shadow-none ring-0;
+    }
+    & .control-prefix {
+      @apply ps-3;
+    }
+    & .control-suffix {
+      @apply pe-3;
+    }
+    & input[type="date"],
+    input[type="datetime-local"],
+    input[type="month"] {
+      & + .control-suffix {
+        @apply pointer-events-none absolute right-1 top-2/4 -translate-y-2/4 appearance-none bg-inherit pe-0;
+        & svg {
+          @apply focus-within:ring-primary-600 focus-within:ring-2 focus-within:ring-inset;
+        }
+      }
+    }
+    &:focus-within {
+      & .control-prefix {
+        @apply text-primary-900;
+      }
+      & .control-suffix {
+        @apply text-primary-900;
+      }
+    }
+  }
+  & select {
+    @apply text-primary-900 pe-9 ps-3 rtl:bg-[0.5rem];
+    background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%237C5E24' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+  }
+  & textarea {
+    @apply h-auto;
+  }
 
-    /** Size definations **/
-    &.control-lg {
-    	& label {
-    		@apply text-base;
-    	}
-    	& .form-control-input {
-    		@apply text-lg;
-	    	& input, select, textarea {
-	    		@apply text-lg py-4;
-	    	}
-	    	& .control-prefix,
-			& .control-suffix {
-	    		& > svg {
-	    			@apply h-7 w-7;
-	    		}
-	    	}
-	    }
+  /** Size definations **/
+  &.control-lg {
+    & label {
+      @apply text-base;
     }
-    &.control-sm {
-    	& .form-control-input {
-    		@apply text-sm;
-	    	& input, select, textarea {
-	    		@apply text-sm py-2;
-	    	}
-	    	& .control-prefix,
-			& .control-suffix {
-	    		& > svg {
-	    			@apply h-5 w-5;
-	    		}
-	    	}
-	    }
+    & .form-control-input {
+      @apply text-lg;
+      & input,
+      select,
+      textarea {
+        @apply py-4 text-lg;
+      }
+      & .control-prefix,
+      & .control-suffix {
+        & > svg {
+          @apply h-7 w-7;
+        }
+      }
     }
-	/* file with drag and drop style */
-	.form-control-dropbox{
-		@apply text-center block border border-dashed border-primary-400 relative bg-whitely-50 rounded-md shadow-sm focus:shadow-md;
-		& svg{
-			@apply mx-auto h-10 w-10 xl:h-12 xl:w-12 text-slate-300;
-		}
-		& label{
-			@apply relative inline-block cursor-pointer rounded-md bg-whitely-50 font-semibold text-primary-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-primary-600 focus-within:ring-offset-2 hover:text-primary-500;
-		}
-	}
+  }
+  &.control-sm {
+    & .form-control-input {
+      @apply text-sm;
+      & input,
+      select,
+      textarea {
+        @apply py-2 text-sm;
+      }
+      & .control-prefix,
+      & .control-suffix {
+        & > svg {
+          @apply h-5 w-5;
+        }
+      }
+    }
+  }
+  /* file with drag and drop style */
+  .form-control-dropbox {
+    @apply border-primary-400 bg-whitely-50 relative block rounded-md border border-dashed text-center shadow-sm focus:shadow-md;
+    & svg {
+      @apply mx-auto h-10 w-10 text-slate-300 xl:h-12 xl:w-12;
+    }
+    & label {
+      @apply bg-whitely-50 text-primary-600 focus-within:ring-primary-600 hover:text-primary-500 relative inline-block cursor-pointer rounded-md font-semibold focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2;
+    }
+  }
 }
