--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -1,39 +1,39 @@
-.aegov-accordion{
-    & .accordion-item{
-        @apply border-b border-aeblack-100;
-    }
-    & .accordion-title{
-        & button{
-            @apply flex justify-between items-center text-aeblack-900 hover:text-primary-700 font-semibold text-base;
-            &.aegov-acc-open{
-                @apply text-primary-700;
-            }
-            & svg{
-                @apply text-inherit;
-            }
-        }
-    }
-    &:not(.aegov-mobile-accordion){
-        & .accordion-title{
-            & button{
-                @apply py-4 md:py-5 xl:py-6 px-3 flex justify-between items-center text-aeblack-900 hover:text-primary-700 font-semibold text-base focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-100;
-            }
-        }
-        & .accordion-content{
-            & .accordion-content-body{
-                @apply py-4 md:py-5 xl:py-6 px-3;
-            }
-        }
-    }
-}
-.accordion-title{
+.aegov-accordion {
+  & .accordion-item {
+    @apply border-aeblack-100 border-b;
+  }
+  & .accordion-title {
     & button {
-        @apply gap-x-4 transition-all flex-nowrap justify-start text-start w-full font-semibold;
-        & svg{
-            @apply h-6 w-6 text-aeblack-600 fill-current flex-shrink-0; 
-        }
+      @apply text-aeblack-900 hover:text-primary-700 flex items-center justify-between text-base font-semibold;
+      &.aegov-acc-open {
+        @apply text-primary-700;
+      }
+      & svg {
+        @apply text-inherit;
+      }
     }
+  }
+  &:not(.aegov-mobile-accordion) {
+    & .accordion-title {
+      & button {
+        @apply text-aeblack-900 hover:text-primary-700 focus-visible:ring-primary-100 flex items-center justify-between px-3 py-4 text-base font-semibold focus-visible:outline-none focus-visible:ring-2 md:py-5 xl:py-6;
+      }
+    }
+    & .accordion-content {
+      & .accordion-content-body {
+        @apply px-3 py-4 md:py-5 xl:py-6;
+      }
+    }
+  }
 }
-.accordion-content{
-    @apply text-aeblack-800;
+.accordion-title {
+  & button {
+    @apply w-full flex-nowrap justify-start gap-x-4 text-start font-semibold transition-all;
+    & svg {
+      @apply text-aeblack-600 h-6 w-6 flex-shrink-0 fill-current;
+    }
+  }
+}
+.accordion-content {
+  @apply text-aeblack-800;
 }
